# optimization_for_SLAM

./: 1.ceres库的使用-tutorial .md  2.ceres库的使用-derivation .md  BA理论解读.md  README.md  ceres库介绍.md  ceres库介绍的使用 .md
ceres_demo/ceres_curve_fitting/: CMakeLists.txt  main.cpp
ceres_demo/ceres_custombundle/: SnavelyReprojectionError.h  ceresBundle.cpp
ceres_demo/ceres_custombundle/common/: BALProblem.cpp
ceres_demo/ceres_pnp/: PNPSimulation.cpp
ceres_demo/ceres_turtorial/: CMakeLists.txt  main.cpp
ceres_official_demo/: readme.md
ch10/ceres_custombundle/: CMakeLists.txt
ch6/ceres_curve_fitting/: main.cpp
ch6/g2o_curve_fitting/: main.cpp
g2o_demo/g2o_curve_fitting/: CMakeLists.txt  main.cpp
pose_graph/: pose_graph_g2o_SE3.cpp
